# might_be_async

./: .gitignore  Cargo.toml  Makefile  README.md  SPEC.md
doc/: func.md  invoke.md  lib.md  select.md
doc/args/: func.md  invoke.md  select_arm.md
doc/usage/: func.rs  func_async_expand.rs  func_expand.rs  invoke.rs  invoke_async_expand.rs  invoke_expand.rs  select.rs  select_async_expand.rs  select_expand.rs
scripts/: expand_codes.py
src/: args.rs  config.rs  func.rs  invoke.rs  lib.rs  select.rs
test/: Cargo.toml
test/async/: Cargo.toml
test/async/src/: lib.rs
test/no_metadata/: Cargo.toml
test/no_metadata/src/: lib.rs
test/src/: lib.rs  test_fallback.rs  test_func.rs  test_invoke.rs  test_select.rs
test/sync/: Cargo.toml
test/sync/src/: lib.rs
tests/: test_func.rs  test_invoke.rs  test_select.rs
