[package]
name = "might_be_async"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/catilgrass/might_be_async"

[lib]
proc-macro = true

[features]

# Only a test placeholder, no actual functionality
foo_async = []
foo_sync = []

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full"] }
toml = "0.8"

[dev-dependencies]
syn = { version = "2.0.118", features = ["full", "printing"] }
